// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic can judge tsumi 1`] = `
ban:
(1) 
1ab1ac1ad1ae1ah1ae1ad1ac1ab
___1ag_______________1af___
1aa1aa1aa1aa1aa1aa1aa1aa1aa
___________________________
___________________________
___________________________
0aa0aa0aa0aa0aa0aa0aa0aa0aa
___0af_______________0ag___
0ab0ac0ad0ae0ah0ae0ad0ac0ab
(0) 
kifu:

{
  "version": "0.0",
  "status": {
    "num": 0
  },
  "ruleid": 0,
  "teban": 0,
  "turn": 0,
  "date": {},
  "moving": null,
  "debug": ""
}
`;

exports[`Basic can judge tsumi 2`] = `
ban:
(1) 
1ab1ac1ad1ae___1ae___1ac1ab
___1ag______1ah0af___1af___
1aa1aa1aa1aa0ad1aa___1aa1aa
____________1aa____________
___________________________
______0aa__________________
0aa0aa___0aa0aa0aa0aa0aa0aa
_____________________0ag___
0ab0ac0ad0ae0ah0ae0ad0ac0ab
(0) aa1 
kifu:
☗7六歩 [0,[7,6,[],[0,"aa"]],[7,7,[0,"aa"],[]]]
☖5四歩 [1,[5,4,[],[1,"aa"]],[5,3,[1,"aa"],[]]]
☗3三角不成 [0,[3,3,[1,"aa"],[0,"af"]],[8,8,[0,"af"],[]],[1,0,"aa"]]
☖4二銀 [1,[4,2,[],[1,"ad"]],[3,1,[1,"ad"],[]]]
☗同角不成 [0,[4,2,[1,"ad"],[0,"af"]],[3,3,[0,"af"],[]],[1,0,"ad"]]
☖5二玉 [1,[5,2,[],[1,"ah"]],[5,1,[1,"ah"],[]]]
☗5三銀 [0,[5,3,[],[0,"ad"]],[-1,0,"ad"]]
☖詰み "_1"
{
  "version": "0.0",
  "status": {
    "num": 2,
    "message": "後手玉が詰みました。先手の勝ちです。"
  },
  "ruleid": 0,
  "teban": 1,
  "turn": 0,
  "date": {},
  "moving": null,
  "debug": ""
}
`;

exports[`Basic can move pieces 1`] = `
ban:
(1) 
1ab1ac1ad1ae1ah1ae1ad1ac1ab
___1ag_______________1af___
1aa1aa1aa1aa1aa1aa1aa1aa1aa
___________________________
___________________________
___________________________
0aa0aa0aa0aa0aa0aa0aa0aa0aa
___0af_______________0ag___
0ab0ac0ad0ae0ah0ae0ad0ac0ab
(0) 
kifu:

{
  "version": "0.0",
  "status": {
    "num": 0
  },
  "ruleid": 0,
  "teban": 0,
  "turn": 0,
  "date": {},
  "moving": null,
  "debug": ""
}
`;

exports[`Basic can move pieces 2`] = `
Array [
  Object {
    "XY": (7, 6),
    "type": 1,
  },
]
`;

exports[`Basic can move pieces 3`] = `
ban:
(1) 
1ab1ac1ad1ae1ah1ae1ad1ac1ab
___1ag_______________1af___
1aa1aa1aa1aa1aa1aa1aa1aa1aa
___________________________
___________________________
______0aa__________________
0aa0aa___0aa0aa0aa0aa0aa0aa
___0af_______________0ag___
0ab0ac0ad0ae0ah0ae0ad0ac0ab
(0) 
kifu:
☗7六歩 [0,[7,6,[],[0,"aa"]],[7,7,[0,"aa"],[]]]
{
  "version": "0.0",
  "status": {
    "num": 1
  },
  "ruleid": 0,
  "teban": 1,
  "turn": 0,
  "date": {},
  "moving": null,
  "debug": ""
}
`;

exports[`Basic can move pieces 4`] = `
Array [
  Object {
    "XY": (3, 4),
    "type": 1,
  },
]
`;

exports[`Basic can move pieces 5`] = `
ban:
(1) 
1ab1ac1ad1ae1ah1ae1ad1ac1ab
___1ag_______________1af___
1aa1aa1aa1aa1aa1aa___1aa1aa
__________________1aa______
___________________________
______0aa__________________
0aa0aa___0aa0aa0aa0aa0aa0aa
___0af_______________0ag___
0ab0ac0ad0ae0ah0ae0ad0ac0ab
(0) 
kifu:
☗7六歩 [0,[7,6,[],[0,"aa"]],[7,7,[0,"aa"],[]]]
☖3四歩 [1,[3,4,[],[1,"aa"]],[3,3,[1,"aa"],[]]]
{
  "version": "0.0",
  "status": {
    "num": 1
  },
  "ruleid": 0,
  "teban": 0,
  "turn": 0,
  "date": {},
  "moving": null,
  "debug": ""
}
`;

exports[`Basic can move pieces 6`] = `
Array [
  Object {
    "XY": (9, 7),
    "type": 2,
  },
  Object {
    "XY": (7, 7),
    "type": 2,
  },
  Object {
    "XY": (6, 6),
    "type": 2,
  },
  Object {
    "XY": (5, 5),
    "type": 2,
  },
  Object {
    "XY": (4, 4),
    "type": 2,
  },
  Object {
    "XY": (3, 3),
    "type": 2,
  },
  Object {
    "XY": (2, 2),
    "type": 2,
  },
  Object {
    "XY": (9, 9),
    "type": 2,
  },
  Object {
    "XY": (7, 9),
    "type": 2,
  },
]
`;

exports[`Basic can move pieces 7`] = `
ban:
(1) 
1ab1ac1ad1ae1ah1ae1ad1ac1ab
___1ag_______________0am___
1aa1aa1aa1aa1aa1aa___1aa1aa
__________________1aa______
___________________________
______0aa__________________
0aa0aa___0aa0aa0aa0aa0aa0aa
_____________________0ag___
0ab0ac0ad0ae0ah0ae0ad0ac0ab
(0) af1 
kifu:
☗7六歩 [0,[7,6,[],[0,"aa"]],[7,7,[0,"aa"],[]]]
☖3四歩 [1,[3,4,[],[1,"aa"]],[3,3,[1,"aa"],[]]]
☗2二角成 [0,[2,2,[1,"af"],[0,"am"]],[8,8,[0,"af"],[]],[1,0,"af"]]
{
  "version": "0.0",
  "status": {
    "num": 1
  },
  "ruleid": 0,
  "teban": 1,
  "turn": 0,
  "date": {},
  "moving": null,
  "debug": ""
}
`;

exports[`Basic can move pieces 8`] = `
Array [
  Object {
    "XY": (2, 2),
    "type": 1,
  },
  Object {
    "XY": (3, 2),
    "type": 1,
  },
  Object {
    "XY": (4, 2),
    "type": 1,
  },
]
`;

exports[`Basic can move pieces 9`] = `
ban:
(1) af1 
1ab1ac1ad1ae1ah1ae___1ac1ab
___1ag_______________1ad___
1aa1aa1aa1aa1aa1aa___1aa1aa
__________________1aa______
___________________________
______0aa__________________
0aa0aa___0aa0aa0aa0aa0aa0aa
_____________________0ag___
0ab0ac0ad0ae0ah0ae0ad0ac0ab
(0) af1 
kifu:
☗7六歩 [0,[7,6,[],[0,"aa"]],[7,7,[0,"aa"],[]]]
☖3四歩 [1,[3,4,[],[1,"aa"]],[3,3,[1,"aa"],[]]]
☗2二角成 [0,[2,2,[1,"af"],[0,"am"]],[8,8,[0,"af"],[]],[1,0,"af"]]
☖同銀 [1,[2,2,[0,"am"],[1,"ad"]],[3,1,[1,"ad"],[]],[1,1,"af"]]
{
  "version": "0.0",
  "status": {
    "num": 1
  },
  "ruleid": 0,
  "teban": 0,
  "turn": 0,
  "date": {},
  "moving": null,
  "debug": ""
}
`;

exports[`Basic can move pieces 10`] = `
ban:
(1) af1 
1ab1ac1ad1ae1ah1ae___1ac1ab
___1ag_______________1ad___
1aa1aa1aa1aa1aa1aa___1aa1aa
__________________1aa______
_______________0af_________
______0aa__________________
0aa0aa___0aa0aa0aa0aa0aa0aa
_____________________0ag___
0ab0ac0ad0ae0ah0ae0ad0ac0ab
(0) 
kifu:
☗7六歩 [0,[7,6,[],[0,"aa"]],[7,7,[0,"aa"],[]]]
☖3四歩 [1,[3,4,[],[1,"aa"]],[3,3,[1,"aa"],[]]]
☗2二角成 [0,[2,2,[1,"af"],[0,"am"]],[8,8,[0,"af"],[]],[1,0,"af"]]
☖同銀 [1,[2,2,[0,"am"],[1,"ad"]],[3,1,[1,"ad"],[]],[1,1,"af"]]
☗4五角 [0,[4,5,[],[0,"af"]],[-1,0,"af"]]
{
  "version": "0.0",
  "status": {
    "num": 1
  },
  "ruleid": 0,
  "teban": 1,
  "turn": 0,
  "date": {},
  "moving": null,
  "debug": ""
}
`;

exports[`Basic can move pieces 11`] = `
Array [
  Object {
    "XY": (3, 2),
    "type": 1,
  },
  Object {
    "XY": (4, 2),
    "type": 1,
  },
  Object {
    "XY": (5, 2),
    "type": 1,
  },
  Object {
    "XY": (3, 1),
    "type": 1,
  },
  Object {
    "XY": (5, 1),
    "type": 1,
  },
]
`;

exports[`Basic can move pieces 12`] = `
ban:
(1) af1 
1ab1ac1ad1ae1ah______1ac1ab
___1ag____________1ae1ad___
1aa1aa1aa1aa1aa1aa___1aa1aa
__________________1aa______
_______________0af_________
______0aa__________________
0aa0aa___0aa0aa0aa0aa0aa0aa
_____________________0ag___
0ab0ac0ad0ae0ah0ae0ad0ac0ab
(0) 
kifu:
☗7六歩 [0,[7,6,[],[0,"aa"]],[7,7,[0,"aa"],[]]]
☖3四歩 [1,[3,4,[],[1,"aa"]],[3,3,[1,"aa"],[]]]
☗2二角成 [0,[2,2,[1,"af"],[0,"am"]],[8,8,[0,"af"],[]],[1,0,"af"]]
☖同銀 [1,[2,2,[0,"am"],[1,"ad"]],[3,1,[1,"ad"],[]],[1,1,"af"]]
☗4五角 [0,[4,5,[],[0,"af"]],[-1,0,"af"]]
☖3二金 [1,[3,2,[],[1,"ae"]],[4,1,[1,"ae"],[]]]
{
  "version": "0.0",
  "status": {
    "num": 1
  },
  "ruleid": 0,
  "teban": 0,
  "turn": 0,
  "date": {},
  "moving": null,
  "debug": ""
}
`;

exports[`Basic can move pieces 13`] = `
Array [
  Object {
    "XY": (5, 4),
    "type": 2,
  },
  Object {
    "XY": (6, 3),
    "type": 2,
  },
  Object {
    "XY": (3, 4),
    "type": 2,
  },
  Object {
    "XY": (5, 6),
    "type": 2,
  },
  Object {
    "XY": (6, 7),
    "type": 2,
  },
  Object {
    "XY": (3, 6),
    "type": 2,
  },
  Object {
    "XY": (2, 7),
    "type": 2,
  },
]
`;

exports[`Basic can move pieces 14`] = `
ban:
(1) af1 
1ab1ac1ad1ae1ah______1ac1ab
___1ag____________1ae1ad___
1aa1aa1aa1aa1aa1aa___1aa1aa
__________________0af______
___________________________
______0aa__________________
0aa0aa___0aa0aa0aa0aa0aa0aa
_____________________0ag___
0ab0ac0ad0ae0ah0ae0ad0ac0ab
(0) aa1 
kifu:
☗7六歩 [0,[7,6,[],[0,"aa"]],[7,7,[0,"aa"],[]]]
☖3四歩 [1,[3,4,[],[1,"aa"]],[3,3,[1,"aa"],[]]]
☗2二角成 [0,[2,2,[1,"af"],[0,"am"]],[8,8,[0,"af"],[]],[1,0,"af"]]
☖同銀 [1,[2,2,[0,"am"],[1,"ad"]],[3,1,[1,"ad"],[]],[1,1,"af"]]
☗4五角 [0,[4,5,[],[0,"af"]],[-1,0,"af"]]
☖3二金 [1,[3,2,[],[1,"ae"]],[4,1,[1,"ae"],[]]]
☗3四角 [0,[3,4,[1,"aa"],[0,"af"]],[4,5,[0,"af"],[]],[1,0,"aa"]]
{
  "version": "0.0",
  "status": {
    "num": 1
  },
  "ruleid": 0,
  "teban": 1,
  "turn": 0,
  "date": {},
  "moving": null,
  "debug": ""
}
`;

exports[`Basic can move pieces 15`] = `
ban:
(1) 
1ab1ac1ad1ae1ah______1ac1ab
___1ag____________1ae1ad___
1aa1aa1aa1aa1aa1aa___1aa1aa
__________________0af______
1af________________________
______0aa__________________
0aa0aa___0aa0aa0aa0aa0aa0aa
_____________________0ag___
0ab0ac0ad0ae0ah0ae0ad0ac0ab
(0) aa1 
kifu:
☗7六歩 [0,[7,6,[],[0,"aa"]],[7,7,[0,"aa"],[]]]
☖3四歩 [1,[3,4,[],[1,"aa"]],[3,3,[1,"aa"],[]]]
☗2二角成 [0,[2,2,[1,"af"],[0,"am"]],[8,8,[0,"af"],[]],[1,0,"af"]]
☖同銀 [1,[2,2,[0,"am"],[1,"ad"]],[3,1,[1,"ad"],[]],[1,1,"af"]]
☗4五角 [0,[4,5,[],[0,"af"]],[-1,0,"af"]]
☖3二金 [1,[3,2,[],[1,"ae"]],[4,1,[1,"ae"],[]]]
☗3四角 [0,[3,4,[1,"aa"],[0,"af"]],[4,5,[0,"af"],[]],[1,0,"aa"]]
☖9五角 [1,[9,5,[],[1,"af"]],[-1,1,"af"]]
{
  "version": "0.0",
  "status": {
    "num": 1
  },
  "ruleid": 0,
  "teban": 0,
  "turn": 0,
  "date": {},
  "moving": null,
  "debug": ""
}
`;

exports[`Basic can move pieces 16`] = `
Array [
  Object {
    "XY": (8, 8),
    "type": 1,
  },
  Object {
    "XY": (7, 8),
    "type": 1,
  },
  Object {
    "XY": (6, 8),
    "type": 1,
  },
]
`;

exports[`Basic can move pieces 17`] = `
ban:
(1) 
1ab1ac1ad1ae1ah______1ac1ab
___1ag____________1ae1ad___
1aa1aa1aa1aa1aa1aa___1aa1aa
__________________0af______
1af________________________
______0aa__________________
0aa0aa___0aa0aa0aa0aa0aa0aa
_________0ad_________0ag___
0ab0ac___0ae0ah0ae0ad0ac0ab
(0) aa1 
kifu:
☗7六歩 [0,[7,6,[],[0,"aa"]],[7,7,[0,"aa"],[]]]
☖3四歩 [1,[3,4,[],[1,"aa"]],[3,3,[1,"aa"],[]]]
☗2二角成 [0,[2,2,[1,"af"],[0,"am"]],[8,8,[0,"af"],[]],[1,0,"af"]]
☖同銀 [1,[2,2,[0,"am"],[1,"ad"]],[3,1,[1,"ad"],[]],[1,1,"af"]]
☗4五角 [0,[4,5,[],[0,"af"]],[-1,0,"af"]]
☖3二金 [1,[3,2,[],[1,"ae"]],[4,1,[1,"ae"],[]]]
☗3四角 [0,[3,4,[1,"aa"],[0,"af"]],[4,5,[0,"af"],[]],[1,0,"aa"]]
☖9五角 [1,[9,5,[],[1,"af"]],[-1,1,"af"]]
☗6八銀 [0,[6,8,[],[0,"ad"]],[7,9,[0,"ad"],[]]]
{
  "version": "0.0",
  "status": {
    "num": 1
  },
  "ruleid": 0,
  "teban": 1,
  "turn": 0,
  "date": {},
  "moving": null,
  "debug": ""
}
`;
